test/message/vm_dont_display_runtime_error.out
beginning
middle
test.vm:1
throw new Error("boo!")
^

Error: boo!
    at test.vm:1:7
    at Script.runInThisContext (node:vm:*)
    at Object.runInThisContext (node:vm:*)
    at Object.<anonymous> (*test*message*vm_dont_display_runtime_error.js:*)
    at Module._compile (node:internal/modules/cjs/loader:*)
    at Module._extensions..js (node:internal/modules/cjs/loader:*)
    at Module.load (node:internal/modules/cjs/loader:*)
    at Module._load (node:internal/modules/cjs/loader:*)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:*)
    at node:internal/main/run_main_module:*:*

Node.js *
